# memr_interns

./: .env.example  .gitignore  .gitmodules  pyproject.toml  setup.sh
apps/accounts/: __init__.py  access_mixins.py  admin.py  forms.py  helpers.py  managers.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_useraccount_date_of_birth.py  0003_useraccount_image.py
apps/accounts/static/accounts/scripts/: passwordReset.js  registration.js  signin.js  updateProfile.js
apps/accounts/static/accounts/styles/: auth_page.css  profile.css  registration.css
apps/interns/: access_mixins.py  admin.py  apps.py  forms.py  helpers.py  managers.py  models.py  urls.py  views.py
apps/interns/migrations/: 0001_initial.py  0002_internship_delete_intern.py  0003_alter_internship_options_and_more.py  0004_remove_internship_date_of_birth.py  0005_alter_internship_options_and_more.py  0006_remove_internship_duration_and_more.py
apps/interns/static/interns/scripts/: addInternship.js  updateInternship.js
apps/interns/static/interns/styles/: dashboard.css  internship_detail.css
apps/tokens/: admin.py  apps.py  managers.py  models.py  totp.py  views.py
apps/tokens/migrations/: 0001_initial.py
core/: __init__.py  settings.py  urls.py
core/static/core/scripts/: formCard.js  utils.js
core/static/core/styles/: admin.css  base.css  form_card.css  main.css
templates/: base.html  test.html
templates/accounts/: password_reset.html  profile.html  registration.html  signin.html
templates/interns/: dashboard.html  internship_detail.html
